--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 </head>
 <body>
     <p>
-    <audio autoplay loop>
-    <source src="Ending1.mp3" type="audio/mp3">
-    </audio>
+    <iframe src="silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe>  
+<audio autoplay loop id="bgmAudio">
+	<source src="./images/voice.mp3" type="audio/mp3" />
+	<source src="./images/voice.ogg" type="audio/ogg" />
+</audio>
     <h1>School Guardians</h1>
     <br><br><br><br><br><a href="play.html">start</a>
 </p>
