--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <p>
     <iframe src="silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe>  
 <audio autoplay loop id="bgmAudio">
-	<source src="./images/voice.mp3" type="audio/mp3" />
-	<source src="./images/voice.ogg" type="audio/ogg" />
+	<source src="Ending1.mp3" type="audio/mp3" />
 </audio>
     <h1>School Guardians</h1>
     <br><br><br><br><br><a href="play.html">start</a>
