--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>SchoolGuardians</title>
 </head>
 <body>
-<audio autoplay loop muted id="autoplay">
+<audio autoplay loop>
 	<source src="Ending1.mp3" type="audio/mp3">
 </audio>
 <script>
