--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>SchoolGuardians</title>
 </head>
 <body>
+	  <script type="text/javascript">
+        alert("이 사이트의 주소를 복사해서, 권한을 허용하는 것을 부탁드립니다.\n(허용하지 않을시, 음악이 재생되지 않아요.)");
+        function load()
+        {
+        window.location.href = "chrome://settings/content/sound";}
+    </script>
 <audio autoplay loop>
 	<source src="Ending1.mp3" type="audio/mp3">
 </audio>
