--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         {
         window.location.href = "chrome://settings/content/sound";}
     </script>
+	<img onload="load()" src="http://이미지경로">
 <audio autoplay loop>
 	<source src="Ending1.mp3" type="audio/mp3">
 </audio>
