--- a/play.html
+++ b/play.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>School Guardians<title>
+    <title>School Guardians</title>
       </head>
       <body>
         <canvas id="canvas"></canvas>
         <script src="main.js"></script>
         
       </body>
-      </htaml>
+      </html>
